<resources>
    <string name="app_name">Plasdor</string>
    <string name="channel_id">PlasdorChannelId</string>
    <string name="channel_name">PlasdorChannelName</string>
    <string name="googleClientId">448090107772-u42rr6qpqi7fr4rtn3evu8gipph6j1km.apps.googleusercontent.com</string>

    <string name="admob_app_id">ca-app-pub-5799348942632742~8783416261</string>
    <string name="rewardedAd">ca-app-pub-5799348942632742/6098022101</string>

    <string name="contactUsNo">8308681687</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="we_have_sent_you_an_email_with_a_code_to_the_nemail_id">we have sent you an email with a code to the \nEmail id -</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="double_tap">Double tap for exit</string>
    <string name="profit_text">Sell and Earn Rs. </string>
    <string name="likes">U+1F44D </string>
    <string name="forgot_password"><u>Forgot Password</u> </string>
    <string name="register">New User? <u>Register</u> </string>
    <string name="login"><u>Log In</u> </string>
    <string name="resend"><u>Resend</u> </string>
    <string name="viewOnMap"><u>View On Map</u> </string>
    <string name="title_activity_maps">Map</string>
    <string name="willUDeliver">Will you deliver \n this product?</string>
    <string name="deliveryNote"><i>*Note: </i>If you will not deliver then You will be charged Rs.40 per order.</string>
    <string name="freeDelivery">Enjoy Free Delivery</string>
    <string name="deliveryNote40"><i>*Note: </i>Delivery Charges is Rs.49.</string>
    <string name="deliveryNote80"><i>*Note: </i>Delivery Charges is Rs.80.</string>
    <string name="insufficientPoint"><i>*Note: </i>Sorry, You don\'t have sufficient point.</string>
    <string name="uEarned">You Earned Total Rs.</string>
    <string name="income">Income Rs: </string>

    <string name="resendCode"><u>Resend</u></string>
    <string name="point1">1.<b>Invite your friend</b> and you will get <b>15</b> points.</string>
    <string name="point2">2.<b>Place a Order</b> and you will get <b>20</b> points.</string>
    <string name="point3">3.<b>Collect Reward</b> and you will get <b>2</b> points.</string>
    <string name="support1">1.<u>How to place order?</u></string>
    <string name="support2">2.<u>How to find my orders?</u></string>
    <string name="support3">3.<u>How to Redeem points?</u></string>
    <string name="support4">4.<u>How to edit personal details?</u></string>
    <string name="support5">5.<u>How can i add product to my list?</u></string>
    <string name="support6">6.<u>How can i find received orders?</u></string>
    <string name="getDirections"><u>Get Direction</u></string>
    <string name="notVerifiedRefresh">You are not verified yet.  <u>Update KYC</u></string>
    <string name="tnc"><u>I agree Terms &amp; Condition</u></string>
    <string name="freeOrder">You are eligible for first free order for <b>2 hours</b></string>
</resources>