<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtSupport1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/support1"
                android:textColor="@color/blue"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:id="@+id/txtSupport2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/support2"
                android:textColor="@color/blue"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:id="@+id/txtSupport3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/support3"
                android:textColor="@color/blue"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:id="@+id/txtSupport4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/support4"
                android:textColor="@color/blue"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:id="@+id/txtSupport5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/support5"
                android:textColor="@color/blue"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:id="@+id/txtSupport6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/support6"
                android:textColor="@color/blue"
                android:textSize="@dimen/_12sdp" />
        </LinearLayout>

        <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/cardView"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_15sdp"
            card_view:cardElevation="4dp"
            card_view:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_15sdp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txtTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="@dimen/_8sdp"
                        android:fontFamily="@font/roboto_bold"
                        android:text="Add Feedback"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/_15sdp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_8sdp"
                        android:hint="Email"
                        android:theme="@style/inputLayoutTheme">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/txtEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_medium"
                            android:inputType="text"
                            android:textSize="@dimen/_10sdp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_8sdp"
                        android:hint="How we will help you?"
                        android:theme="@style/inputLayoutTheme">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/txtDetails"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_medium"
                            android:lines="7"
                            android:gravity="top"
                            android:inputType="text|textMultiLine"
                            android:textSize="@dimen/_10sdp" />
                    </com.google.android.material.textfield.TextInputLayout>



                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnSubmit"
                        android:layout_width="@dimen/_80sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:layout_marginBottom="@dimen/_10sdp"
                        android:background="@drawable/rounded_bg_orange"
                        android:text="Submit"
                        android:textColor="@color/white" />
                </LinearLayout>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>

    <include layout="@layout/loader" />
</RelativeLayout>